--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- CSS Utama -->
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/font-awesome.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -15,13 +16,13 @@
   <body>
     <header class="navbar-container">
       <div class="logo">
-        <img src="img/dicoding-header-logo.png" alt="Dicoding Indonesia" />
+        <img src="img/logo-white.png" alt="Dicoding Indonesia" />
       </div>
       <nav class="nav-list">
         <ul>
           <li><a href="#beranda">Beranda</a></li>
-          <li><a href="#newest-authors">News Templates</a></li>
-          <li><a href="#hot-news">Hot Templates</a></li>
+          <li><a href="#newest-authors">New Templates</a></li>
+          <li><a href="#hot-news">Hot Places</a></li>
           <li><a href="#subscribe-news">Subscribe Template</a></li>
         </ul>
       </nav>
@@ -29,9 +30,9 @@
     <main id="beranda">
       <div class="content">
         <div class="content-description">
-          <h1 class="title">Digital Wedding Indonesia</h1>
+          <h1 class="title">Dream Wedding Indonesia</h1>
           <p>
-            Selamat datang di <b>Digital Wedding Indonesia</b>, 
+            Selamat datang di <b>Dream Wedding Indonesia</b>, 
             tempat di mana keindahan undangan pernikahan terwujud. Kami paham bahwa pernikahan Anda adalah momen yang unik dan berharga. Dengan alat desain yang mudah digunakan, Anda dapat dengan bebas menyesuaikan setiap aspek undangan, dari tata letak hingga warna, sehingga setiap detail mencerminkan kepribadian dan gaya Anda.
           </p>
           <button>Lebih lanjut</button>
@@ -71,8 +72,7 @@
               <a href="#" class="news-author-link">
                 <div class="newest-authors-contents card content">
                   <img class="author-pict" src="img/template/5.png" alt="" srcset="">
-                  <h2>Jhone Doe</h2>
-                  <span>@jhondoe</span>
+                  <h2>Purple Love</h2>
                 </div>
               </a>
             </li>
@@ -80,8 +80,7 @@
               <a href="#" class="news-author-link">
                 <div class="newest-authors-contents card content">
                   <img class="author-pict" src="img/template/1.png" alt="" srcset="">
-                  <h2>Jhone Doe</h2>
-                  <span>@jhondoe</span>
+                  <h2>Blue Ocean</h2>
                 </div>
               </a>
             </li>
@@ -89,8 +88,7 @@
               <a href="#" class="news-author-link">
                 <div class="newest-authors-contents card content">
                   <img class="author-pict" src="img/template/2.png" alt="" srcset="">
-                  <h2>Jhone Doe</h2>
-                  <span>@jhondoe</span>
+                  <h2>Retro Love</h2>
                 </div>
               </a>
             </li>
@@ -98,8 +96,7 @@
               <a href="#" class="news-author-link">
                 <div class="newest-authors-contents card content">
                   <img class="author-pict" src="img/template/3.png" alt="" srcset="">
-                  <h2>Jhone Doe</h2>
-                  <span>@jhondoe</span>
+                  <h2>Flower Heart</h2>
                 </div>
               </a>
             </li>
@@ -107,8 +104,7 @@
               <a href="#" class="news-author-link">
                 <div class="newest-authors-contents card content">
                   <img class="author-pict" src="img/template/4.png" alt="" srcset="">
-                  <h2>Jhone Doe</h2>
-                  <span>@jhondoe</span>
+                  <h2>Happy Day's</h2>
                 </div>
               </a>
             </li>
@@ -119,8 +115,8 @@
     <section id="hot-news">
       <div id="container-hot-news" class="container-hot-news">
         <div class="news-hot-title">
-          <h1>Hotest News</h1>
-          <span>Discover the hotest News all topics.</span>
+          <h1>Hotest Places</h1>
+          <span>Rekomendasi Tempat Pernikahan.</span>
         </div>
         <div id="news-hot-contents" class="news-hot-contents">
           <div class="hot-news-first">
@@ -159,9 +155,58 @@
         </div>
       </div>
     </section>
-    <section id="testimoni">
-      <div id="container-testimoni"class="container-testimoni">
-        test
+    <section id="testimonials">
+      <div id="container-testimonials"class="container-testimonials">
+        <h1>Testimonials</h1>
+        <span>Beberapa mempelai yang mempercayai <b><i>Dream</i></b> nya.</span>
+        <div class="row-testimonials">
+          <ul>
+            <li>
+              <div class="card content content-testimonial">
+                <img class="img-responsive img-testimonial" src="img/testimonials/1.jpeg" alt="" srcset="">
+                <div class="footer-testimonial">
+                  <p><i class="fa fa-user"></i> Muhammad Fahrizal</p>
+                  <p style="line-height: 1.2;"><i class="fa fa-map-pin"></i> Pondok Kacang Prima, Tangerang Selatan. Banten</p>
+                  <p><i class="fa fa-phone"></i> +62 811 261 671</p>
+                  <p style="line-height: 1.2;"><i class="fa fa-globe"></i> <a href="https://dream.wedding/lorem&ipsum">Klik Disini</a></p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="card content content-testimonial">
+                <img class="img-responsive img-testimonial" src="img/testimonials/1.jpeg" alt="" srcset="">
+                <div class="footer-testimonial">
+                  <p><i class="fa fa-user"></i> Muhammad Fahrizal</p>
+                  <p style="line-height: 1.2;"><i class="fa fa-map-pin"></i> Pondok Kacang Prima, Tangerang Selatan. Banten</p>
+                  <p><i class="fa fa-phone"></i> +62 811 261 671</p>
+                  <p style="line-height: 1.2;"><i class="fa fa-globe"></i> <a href="https://dream.wedding/lorem&ipsum">Klik Disini</a></p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="card content content-testimonial">
+                <img class="img-responsive img-testimonial" src="img/testimonials/1.jpeg" alt="" srcset="">
+                <div class="footer-testimonial">
+                  <p><i class="fa fa-user"></i> Muhammad Fahrizal</p>
+                  <p style="line-height: 1.2;"><i class="fa fa-map-pin"></i> Pondok Kacang Prima, Tangerang Selatan. Banten</p>
+                  <p><i class="fa fa-phone"></i> +62 811 261 671</p>
+                  <p style="line-height: 1.2;"><i class="fa fa-globe"></i> <a href="https://dream.wedding/lorem&ipsum">Klik Disini</a></p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="card content content-testimonial">
+                <img class="img-responsive img-testimonial" src="img/testimonials/1.jpeg" alt="" srcset="">
+                <div class="footer-testimonial">
+                  <p><i class="fa fa-user"></i> Muhammad Fahrizal</p>
+                  <p style="line-height: 1.2;"><i class="fa fa-map-pin"></i> Pondok Kacang Prima, Tangerang Selatan. Banten</p>
+                  <p><i class="fa fa-phone"></i> +62 811 261 671</p>
+                  <p style="line-height: 1.2;"><i class="fa fa-globe"></i> <a href="https://dream.wedding/lorem&ipsum">Klik Disini</a></p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
     <section id="subscribe-news">
