Fix: based on review

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
       </nav>
     </header>
     <main id="beranda">
+      <aside>
+        <div class="social-media">
+          <ul>
+            <li>
+              <a href="#" onClick='alert("Promo Berhasil di Klaim!")'><img class="promo" src="img/promo.png" alt=""></a>
+            </li>
+          </ul>
+        </div>
+      </aside>
       <div class="content">
         <div class="content-description">
           <h1 class="title">Dream Wedding Indonesia</h1>
@@ -41,186 +50,169 @@
           <img src="img/4.png" alt="Dicoding Indonesia" />
         </div>
       </div>
-      <aside>
-        <div class="social-media">
-          <ul>
-            <li>
-              <a href="#"><i class="fab fa-youtube"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-facebook"></i></a>
-            </li>
-          </ul>
+      <section id="newest-authors">
+        <div class="newest-authors">
+          <div id="newest-author-title">
+            <h1 class="newest-author-title">Template Terbaru</h1>
+            <span class="newest-author-description">berikut beberapa template terbaru</span>
+          </div>
+          <div class="newest-authors-contents">
+            <ul>
+              <li>
+                <a href="#" class="news-author-link">
+                  <div class="newest-authors-contents card content">
+                    <img class="author-pict" src="img/template/5.png" alt="" srcset="">
+                    <h2>Purple Love</h2>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="news-author-link">
+                  <div class="newest-authors-contents card content">
+                    <img class="author-pict" src="img/template/1.png" alt="" srcset="">
+                    <h2>Blue Ocean</h2>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="news-author-link">
+                  <div class="newest-authors-contents card content">
+                    <img class="author-pict" src="img/template/2.png" alt="" srcset="">
+                    <h2>Retro Love</h2>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="news-author-link">
+                  <div class="newest-authors-contents card content">
+                    <img class="author-pict" src="img/template/3.png" alt="" srcset="">
+                    <h2>Flower Heart</h2>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="news-author-link">
+                  <div class="newest-authors-contents card content">
+                    <img class="author-pict" src="img/template/4.png" alt="" srcset="">
+                    <h2>Happy Day's</h2>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </aside>
+      </section>
+      <section id="hot-news">
+        <div id="container-hot-news" class="container-hot-news">
+          <div class="news-hot-title">
+            <h1>Hotest Places</h1>
+            <span>Rekomendasi Tempat Pernikahan.</span>
+          </div>
+          <div id="news-hot-contents" class="news-hot-contents">
+            <div class="hot-news-first">
+              <div class="card card-hot-news-first">
+                <img class="img-responsive img-hot-news-first" src="img/background-b.jpg" alt="">
+                <div class="description" style="margin-left: 10px;">
+                  <span>24 Agustus 2023</span>
+                  <h2>Lorem ipsum dolor sit amet consectetur</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quos consectetur vero voluptatem eaque quibusdam nemo corrupti nam, saepe deleniti veniam voluptate, magni quis officiis facilis quasi, delectus porro obcaecati!</p>
+                </div>
+              </div>
+            </div>
+            <div class="hot-news-lists">
+              <div class="card card-hot-news-list">
+                <div class="description">
+                  <h2>Lorem ipsum dolor sit amet consectetur</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img class="img-responsive img-hot-news-list" src="img/background-b.jpg" alt="">
+              </div>
+              <div class="card card-hot-news-list">
+                <div class="description">
+                  <h2>Lorem ipsum dolor sit amet consectetur</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img class="img-responsive img-hot-news-list" src="img/background-c.jpg" alt="">
+              </div>
+              <div class="card card-hot-news-list">
+                <div class="description">
+                  <h2>Lorem ipsum dolor sit amet consectetur</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <img class="img-responsive img-hot-news-list" src="img/background-d.jpg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="testimonials">
+        <div id="container-testimonials"class="container-testimonials">
+          <h1>Testimonials</h1>
+          <span>Beberapa mempelai yang mempercayai <b><i>Dream</i></b> nya.</span>
+          <div class="row-testimonials">
+            <ul>
+              <li>
+                <div class="card content content-testimonial">
+                  <img class="img-responsive img-testimonial" src="img/testimonials/1.jpeg" alt="" srcset="">
+                  <div class="footer-testimonial">
+                    <p><i class="fa fa-user"></i> Muhammad Fahrizal</p>
+                    <p style="line-height: 1.2;"><i class="fa fa-map-pin"></i> Pondok Kacang Prima, Tangerang Selatan. Banten</p>
+                    <p><i class="fa fa-phone"></i> +62 811 261 671</p>
+                    <p style="line-height: 1.2;"><i class="fa fa-globe"></i> <a href="https://dream.wedding/lorem&ipsum">Klik Disini</a></p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="card content content-testimonial">
+                  <img class="img-responsive img-testimonial" src="img/testimonials/1.jpeg" alt="" srcset="">
+                  <div class="footer-testimonial">
+                    <p><i class="fa fa-user"></i> Muhammad Fahrizal</p>
+                    <p style="line-height: 1.2;"><i class="fa fa-map-pin"></i> Pondok Kacang Prima, Tangerang Selatan. Banten</p>
+                    <p><i class="fa fa-phone"></i> +62 811 261 671</p>
+                    <p style="line-height: 1.2;"><i class="fa fa-globe"></i> <a href="https://dream.wedding/lorem&ipsum">Klik Disini</a></p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="card content content-testimonial">
+                  <img class="img-responsive img-testimonial" src="img/testimonials/1.jpeg" alt="" srcset="">
+                  <div class="footer-testimonial">
+                    <p><i class="fa fa-user"></i> Muhammad Fahrizal</p>
+                    <p style="line-height: 1.2;"><i class="fa fa-map-pin"></i> Pondok Kacang Prima, Tangerang Selatan. Banten</p>
+                    <p><i class="fa fa-phone"></i> +62 811 261 671</p>
+                    <p style="line-height: 1.2;"><i class="fa fa-globe"></i> <a href="https://dream.wedding/lorem&ipsum">Klik Disini</a></p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="card content content-testimonial">
+                  <img class="img-responsive img-testimonial" src="img/testimonials/1.jpeg" alt="" srcset="">
+                  <div class="footer-testimonial">
+                    <p><i class="fa fa-user"></i> Muhammad Fahrizal</p>
+                    <p style="line-height: 1.2;"><i class="fa fa-map-pin"></i> Pondok Kacang Prima, Tangerang Selatan. Banten</p>
+                    <p><i class="fa fa-phone"></i> +62 811 261 671</p>
+                    <p style="line-height: 1.2;"><i class="fa fa-globe"></i> <a href="https://dream.wedding/lorem&ipsum">Klik Disini</a></p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section id="subscribe-news">
+        <div class="container-subscribe-news">
+          <div class="cta-subscribe-news">
+            <h2>Percayakan Undanganmu <br>Kepada Kami!</h2>
+            <p>Read and share new perspectives on just about any topic. Everyone's welcome.          </p>
+            <button>BUAT UNDANGAN</button>
+          </div>
+          <div class="background-subscribe-news">
+            <img class="img-responsive img-subscribe" src="img/subscribe-news.png" alt="">
+          </div>
+        </div>
+      </section>
     </main>
-    <section id="newest-authors">
-      <div class="newest-authors">
-        <div id="newest-author-title">
-          <h1 class="newest-author-title">Template Terbaru</h1>
-          <span class="newest-author-description">berikut beberapa template terbaru</span>
-        </div>
-        <div class="newest-authors-contents">
-          <ul>
-            <li>
-              <a href="#" class="news-author-link">
-                <div class="newest-authors-contents card content">
-                  <img class="author-pict" src="img/template/5.png" alt="" srcset="">
-                  <h2>Purple Love</h2>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="news-author-link">
-                <div class="newest-authors-contents card content">
-                  <img class="author-pict" src="img/template/1.png" alt="" srcset="">
-                  <h2>Blue Ocean</h2>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="news-author-link">
-                <div class="newest-authors-contents card content">
-                  <img class="author-pict" src="img/template/2.png" alt="" srcset="">
-                  <h2>Retro Love</h2>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="news-author-link">
-                <div class="newest-authors-contents card content">
-                  <img class="author-pict" src="img/template/3.png" alt="" srcset="">
-                  <h2>Flower Heart</h2>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="news-author-link">
-                <div class="newest-authors-contents card content">
-                  <img class="author-pict" src="img/template/4.png" alt="" srcset="">
-                  <h2>Happy Day's</h2>
-                </div>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
-    <section id="hot-news">
-      <div id="container-hot-news" class="container-hot-news">
-        <div class="news-hot-title">
-          <h1>Hotest Places</h1>
-          <span>Rekomendasi Tempat Pernikahan.</span>
-        </div>
-        <div id="news-hot-contents" class="news-hot-contents">
-          <div class="hot-news-first">
-            <div class="card card-hot-news-first">
-              <img class="img-responsive img-hot-news-first" src="img/background-b.jpg" alt="">
-              <div class="description" style="margin-left: 10px;">
-                <span>24 Agustus 2023</span>
-                <h2>Lorem ipsum dolor sit amet consectetur</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quos consectetur vero voluptatem eaque quibusdam nemo corrupti nam, saepe deleniti veniam voluptate, magni quis officiis facilis quasi, delectus porro obcaecati!</p>
-              </div>
-            </div>
-          </div>
-          <div class="hot-news-lists">
-            <div class="card card-hot-news-list">
-              <div class="description">
-                <h2>Lorem ipsum dolor sit amet consectetur</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-              </div>
-              <img class="img-responsive img-hot-news-list" src="img/background-b.jpg" alt="">
-            </div>
-            <div class="card card-hot-news-list">
-              <div class="description">
-                <h2>Lorem ipsum dolor sit amet consectetur</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-              </div>
-              <img class="img-responsive img-hot-news-list" src="img/background-c.jpg" alt="">
-            </div>
-            <div class="card card-hot-news-list">
-              <div class="description">
-                <h2>Lorem ipsum dolor sit amet consectetur</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-              </div>
-              <img class="img-responsive img-hot-news-list" src="img/background-d.jpg" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="testimonials">
-      <div id="container-testimonials"class="container-testimonials">
-        <h1>Testimonials</h1>
-        <span>Beberapa mempelai yang mempercayai <b><i>Dream</i></b> nya.</span>
-        <div class="row-testimonials">
-          <ul>
-            <li>
-              <div class="card content content-testimonial">
-                <img class="img-responsive img-testimonial" src="img/testimonials/1.jpeg" alt="" srcset="">
-                <div class="footer-testimonial">
-                  <p><i class="fa fa-user"></i> Muhammad Fahrizal</p>
-                  <p style="line-height: 1.2;"><i class="fa fa-map-pin"></i> Pondok Kacang Prima, Tangerang Selatan. Banten</p>
-                  <p><i class="fa fa-phone"></i> +62 811 261 671</p>
-                  <p style="line-height: 1.2;"><i class="fa fa-globe"></i> <a href="https://dream.wedding/lorem&ipsum">Klik Disini</a></p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card content content-testimonial">
-                <img class="img-responsive img-testimonial" src="img/testimonials/1.jpeg" alt="" srcset="">
-                <div class="footer-testimonial">
-                  <p><i class="fa fa-user"></i> Muhammad Fahrizal</p>
-                  <p style="line-height: 1.2;"><i class="fa fa-map-pin"></i> Pondok Kacang Prima, Tangerang Selatan. Banten</p>
-                  <p><i class="fa fa-phone"></i> +62 811 261 671</p>
-                  <p style="line-height: 1.2;"><i class="fa fa-globe"></i> <a href="https://dream.wedding/lorem&ipsum">Klik Disini</a></p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card content content-testimonial">
-                <img class="img-responsive img-testimonial" src="img/testimonials/1.jpeg" alt="" srcset="">
-                <div class="footer-testimonial">
-                  <p><i class="fa fa-user"></i> Muhammad Fahrizal</p>
-                  <p style="line-height: 1.2;"><i class="fa fa-map-pin"></i> Pondok Kacang Prima, Tangerang Selatan. Banten</p>
-                  <p><i class="fa fa-phone"></i> +62 811 261 671</p>
-                  <p style="line-height: 1.2;"><i class="fa fa-globe"></i> <a href="https://dream.wedding/lorem&ipsum">Klik Disini</a></p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="card content content-testimonial">
-                <img class="img-responsive img-testimonial" src="img/testimonials/1.jpeg" alt="" srcset="">
-                <div class="footer-testimonial">
-                  <p><i class="fa fa-user"></i> Muhammad Fahrizal</p>
-                  <p style="line-height: 1.2;"><i class="fa fa-map-pin"></i> Pondok Kacang Prima, Tangerang Selatan. Banten</p>
-                  <p><i class="fa fa-phone"></i> +62 811 261 671</p>
-                  <p style="line-height: 1.2;"><i class="fa fa-globe"></i> <a href="https://dream.wedding/lorem&ipsum">Klik Disini</a></p>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
-    <section id="subscribe-news">
-      <div class="container-subscribe-news">
-        <div class="cta-subscribe-news">
-          <h2>Percayakan Undanganmu <br>Kepada Kami!</h2>
-          <p>Read and share new perspectives on just about any topic. Everyone's welcome.          </p>
-          <button>BUAT UNDANGAN</button>
-        </div>
-        <div class="background-subscribe-news">
-          <img class="img-responsive img-subscribe" src="img/subscribe-news.png" alt="">
-        </div>
-      </div>
-    </section>
     <footer style="background: #2D3E50;">
       <center><a style="color:white" href="https://masfhr.info">Muhammad Fahrizal - </a> <span><a href="mailto:B2023090@dicoding.org"
       style="color:white"> B2023090@dicoding.org</span></a></center>
